@@ -253,7 +253,7 @@
 
       \item The minimum supported version of OS X is 10.6 (\sQuote{Snow
 	Leopard}): even that has been unsupported by Apple since 2012.
-      
+
       \item The \command{configure} default on OS X is
       \option{--disable-R-framework}: enable this if you intend to
       install under \file{/Library/Frameworks} and use with \code{R.app}.
@@ -273,6 +273,9 @@
       deprecated in favour of the standard OpenMP define \samp{_OPENMP}.
 
       \item \code{R_GE_version} has been increased to \code{11}.
+
+      \item New \code{R_orderVector1()}, as fast one-argument version of
+      \code{R_orderVector()}.
     }
   }
 
